--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Web Agency Udine
 email: info@spidermake.com
 tel: +39-388-9005888
 description:
-  Spiedermake Web Agency realizza Siti Internet a Udine. Crea siti web a Trieste. Posizionamento su motori di ricerca e SEO. Servizi web in Friuli-Venezia Giulia.
+  Spiedermake Web Agency realizza Siti Internet a Udine. Crea siti web a Trieste. Posizionamento su motori di ricerca, SEO. Servizi web in Friuli.
 baseurl: "/"
 url: "https://www.spidermake.com"
 facebook_username: spidermake
