aggiunti dati strutturati, custom search

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: info@spidermake.com
 tel: +39-388-9005888
 description:
   Spiedermake Web Agency realizza Siti Internet a Udine. Crea siti web a Trieste. Posizionamento su motori di ricerca, SEO. Servizi web in Friuli.
-baseurl: ""
+baseurl: "/"
 url: "https://www.spidermake.com"
 facebook_username: spidermake
 linkedin_username: spidermake
